--- a/DOSTravelingSecretary/Base.lproj/Main.storyboard
+++ b/DOSTravelingSecretary/Base.lproj/Main.storyboard
@@ -16,13 +16,13 @@
                     </tabBar>
                     <connections>
                         <segue destination="A4H-MV-JVM" kind="relationship" relationship="viewControllers" id="JQi-bT-ITJ"/>
+                        <segue destination="9wI-je-ePT" kind="relationship" relationship="viewControllers" id="Lgf-SI-G83"/>
                         <segue destination="914-M9-eM7" kind="relationship" relationship="viewControllers" id="Oz9-3x-7Ri"/>
-                        <segue destination="0pd-5c-rVK" kind="relationship" relationship="viewControllers" id="xWv-GX-CER"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="220" y="180"/>
+            <point key="canvasLocation" x="-360" y="-712"/>
         </scene>
         <!--Trip Stats Table View Controller-->
         <scene sceneID="jR1-ff-N16">
@@ -69,7 +69,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kC6-ds-uhg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1189" y="524"/>
+            <point key="canvasLocation" x="609" y="-368"/>
         </scene>
         <!--Trips Table View Controller - Recent-->
         <scene sceneID="ubJ-v9-26Q">
@@ -137,7 +137,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1179" y="-224"/>
+            <point key="canvasLocation" x="599" y="-1116"/>
         </scene>
         <!--Trip Detail Table View Controller - Trip Detail-->
         <scene sceneID="D8t-6X-2Zw">
@@ -182,7 +182,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="unb-Zh-9qz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1605" y="-225"/>
+            <point key="canvasLocation" x="1025" y="-1117"/>
         </scene>
         <!--Navigation Controller - Secretary Trips-->
         <scene sceneID="iZ1-T1-QDu">
@@ -201,7 +201,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xYq-Ia-aB8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="639" y="-224"/>
+            <point key="canvasLocation" x="59" y="-1116"/>
         </scene>
         <!--Navigation Controller - Item-->
         <scene sceneID="2Qg-Fu-hGJ">
@@ -220,7 +220,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b8q-oV-rac" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="663" y="524"/>
+            <point key="canvasLocation" x="83" y="-368"/>
         </scene>
         <!--Appointments Table View Controller-->
         <scene sceneID="T3f-p3-oXN">
@@ -258,7 +258,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qSB-lf-VXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1190" y="1241"/>
+            <point key="canvasLocation" x="610" y="349"/>
         </scene>
         <!--Navigation Controller - Item-->
         <scene sceneID="t70-Hl-CPh">
@@ -277,13 +277,143 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pyP-JX-mNk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="664" y="1241"/>
+            <point key="canvasLocation" x="84" y="349"/>
+        </scene>
+        <!--Featured Stats View Controller - Distance Traveled-->
+        <scene sceneID="jZu-zl-0BF">
+            <objects>
+                <viewController id="9wI-je-ePT" customClass="DOSFeaturedStatsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7zn-Sz-XyW"/>
+                        <viewControllerLayoutGuide type="bottom" id="Gc7-YF-BYA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dvK-z4-ehw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QCz-HM-7gF">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <navigationItem title="Distance Traveled" id="e50-IM-beV"/>
+                                </items>
+                            </navigationBar>
+                            <pageControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="VUu-69-aSk">
+                                <rect key="frame" x="141" y="475" width="39" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </pageControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="VUu-69-aSk" secondAttribute="bottom" constant="56" id="7my-TO-jhq"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Distance Traveled" image="FeaturedStatsIcon" id="Dud-pZ-zn7"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="pageControl" destination="VUu-69-aSk" id="cK8-rL-k4y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ipe-DS-8Xd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="87" y="1088"/>
+        </scene>
+        <!--Page View Controller-->
+        <scene sceneID="iZP-Oz-a1j">
+            <objects>
+                <pageViewController storyboardIdentifier="FeaturedStatsPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="NUE-xX-W3q" sceneMemberID="viewController">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </pageViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yHc-Mu-LoX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="615" y="1093"/>
+        </scene>
+        <!--Stats Page Content View Controller-->
+        <scene sceneID="V6s-hk-wDs">
+            <objects>
+                <viewController storyboardIdentifier="FeaturedStatsPageContentController" id="JkJ-Vu-mk4" customClass="DOSStatsPageContentViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="09P-ov-LVi"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y5h-Ip-HkG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="muf-Pc-xSn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Uz-2c-hwR">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="454"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rs8-ww-fv3">
+                                <rect key="frame" x="0.0" y="282" width="320" height="125"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view alpha="0.65000000000000002" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PNt-bP-YJc">
+                                        <rect key="frame" x="0.0" y="13" width="320" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="312,927" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j77-2r-8bE">
+                                        <rect key="frame" x="28" y="21" width="272" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1.31" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LVx-TW-auD">
+                                        <rect key="frame" x="64" y="66" width="192" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MILES FLOWN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbB-gD-gql">
+                                        <rect key="frame" x="116" y="37" width="89" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="10"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TRIPS FROM D.C. TO MOON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6DQ-Dn-dCU">
+                                        <rect key="frame" x="9" y="84" width="302" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Rs8-ww-fv3" firstAttribute="leading" secondItem="2Uz-2c-hwR" secondAttribute="leading" id="I5z-dM-GJK"/>
+                            <constraint firstItem="Rs8-ww-fv3" firstAttribute="top" secondItem="09P-ov-LVi" secondAttribute="bottom" constant="280" id="NgA-Zn-WFu"/>
+                            <constraint firstAttribute="trailing" secondItem="Rs8-ww-fv3" secondAttribute="trailing" id="OdO-Bw-Dpy"/>
+                            <constraint firstItem="Rs8-ww-fv3" firstAttribute="leading" secondItem="muf-Pc-xSn" secondAttribute="leading" id="Vkg-0d-gvj"/>
+                            <constraint firstItem="Rs8-ww-fv3" firstAttribute="trailing" secondItem="2Uz-2c-hwR" secondAttribute="trailing" id="sHt-r4-cT4"/>
+                            <constraint firstItem="Y5h-Ip-HkG" firstAttribute="top" secondItem="Rs8-ww-fv3" secondAttribute="bottom" constant="143" id="zic-vY-oeg"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="2Uz-2c-hwR" id="zrY-L2-09O"/>
+                        <outlet property="distanceTraveledLabel" destination="j77-2r-8bE" id="j7D-fH-Utv"/>
+                        <outlet property="equivalentDistanceLabel" destination="6DQ-Dn-dCU" id="UKD-5i-EOq"/>
+                        <outlet property="equivalentTimesLabel" destination="LVx-TW-auD" id="YNQ-0j-cFl"/>
+                        <outlet property="textBackgroundColor" destination="PNt-bP-YJc" id="W4U-aU-EeK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W0S-fY-Zrw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1015" y="1093"/>
         </scene>
     </scenes>
     <resources>
-        <image name="AppointmentIcon" width="25" height="25"/>
-        <image name="PlaneIcon" width="25" height="25"/>
-        <image name="StatsIcon" width="27" height="27"/>
+        <image name="AppointmentIcon" width="27" height="23"/>
+        <image name="FeaturedStatsIcon" width="26" height="30"/>
+        <image name="PlaneIcon" width="25" height="24"/>
+        <image name="StatsIcon" width="25" height="21"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
